--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # Application
 web/app/plugins/*
 !web/app/plugins/.gitkeep
-web/app/mu-plugins/*/
+web/app/mu-plugins/*
+!web/app/mu-plugins/bedrock-autoloader.php
+!web/app/mu-plugins/disallow-indexing.php
+!web/app/mu-plugins/login-redirect-hack.php
+!web/app/mu-plugins/register-theme-directory.php
 web/app/upgrade
 web/app/uploads/*
 !web/app/uploads/.gitkeep
