--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ web/app/mu-plugins/*
 !web/app/mu-plugins/login-redirect-hack.php
 !web/app/mu-plugins/register-theme-directory.php
 web/app/upgrade
-web/app/uploads/*
+#web/app/uploads/*
 !web/app/uploads/.gitkeep
-
+web/app/updraft/*
 # WordPress
 web/wp
 web/.htaccess
