--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "forum": "https://discourse.roots.io/category/bedrock"
   },
   "config": {
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "secure-http":false
   },
   "repositories": [
     {
@@ -39,26 +40,30 @@
     "johnpbloch/wordpress": "4.4.2",
     "oscarotero/env": "^1.0",
     "lamosty/bedrock-plugin-control": "^1.0",
-        "wpackagist-plugin/advanced-custom-fields": "4.4.3",
+        
     "roots/soil": "3.6.0",
     "wpackagist-plugin/admin-post-navigation": "1.9.2",
     "wpackagist-plugin/post-types-order": "1.8.5",
-    "wpackagist-plugin/post-type-switcher": "1.5",
-    "wpackagist-plugin/custom-post-type-ui": "1.1.2",  
     "wpackagist-plugin/duplicate-post": "2.6",
     "wpackagist-plugin/svg-support": "2.2.2",
     "wpackagist-plugin/disable-comments": "1.4",
-    "wpackagist-plugin/woocommerce": "2.5.1",
     "wpackagist-plugin/favicon-by-realfavicongenerator": "1.3.2",
-    "wpackagist-plugin/enable-media-replace": "3.0.4",
-    "wpackagist-plugin/siteorigin-panels": "2.2.2",
-    "wpackagist-plugin/so-widgets-bundle": "1.5.6",
-    "wpackagist-plugin/custom-upload-dir": "3.4.3.1"
+    "wpackagist-plugin/enable-media-replace": "3.0.4",  
+    "wpackagist-plugin/widget-importer-exporter": "1.2.2",
+    "wpackagist-plugin/export-categories": "1.0",
+    "wpackagist-plugin/wordpress-importer": "0.6.1",
+  
+    "wpackagist-plugin/juiz-social-post-sharer": "1.4.2",
+    "wpackagist-plugin/category-color": "1.2",
+    "wpackagist-plugin/easy-image-widget": "1.1.1",
+    "wpackagist-plugin/no-category-base-wpml": "1.2",
+    "wpackagist-plugin/tabsy": "1.3",
+    "mobiledetect/mobiledetectlib": "^2.8"
   },  
   "require-dev": {
     "wpackagist-plugin/query-monitor": ">=2.8.1",
             "wpackagist-plugin/show-current-template": "0.2.2",
-    
+    "wpackagist-plugin/fakerpress": "0.4.2",
     "wpackagist-plugin/debug-bar": ">=0.8.2"
     },
   "extra": {
