--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,14 @@
     "wpackagist-plugin/no-category-base-wpml": "1.2",
     "wpackagist-plugin/tabsy": "1.3",
     "wpackagist-plugin/regenerate-thumbnails": "2.2.6",
-    "mobiledetect/mobiledetectlib": "^2.8"
+    "mobiledetect/mobiledetectlib": "^2.8",
+    "wpackagist-plugin/xml-sitemap-feed": "4.7.1",
+    "wpackagist-plugin/seo-ultimate": "7.6.5.8",
+    "wpackagist-plugin/wp-seo-structured-data-schema": "1.2",
+    "wpackagist-plugin/wordpress-seo": "3.2.5",
+    "wpackagist-plugin/disable-comments": "1.5",
+    "wpackagist-plugin/wp-sweep": "1.07",
+    "wpackagist-plugin/transients-manager": "1.7.2"
   },  
   "require-dev": {
     "wpackagist-plugin/query-monitor": ">=2.8.1",
