--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Application
-web/app/plugins/*
-!web/app/plugins/.gitkeep
+web/app/plugins
 web/app/mu-plugins/*
 !web/app/mu-plugins/bedrock-autoloader.php
 !web/app/mu-plugins/disallow-indexing.php
